--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
   
+  <!-- Google Maps container -->
   <div id="map"></div>
 
   <!-- Javascript call to Google Maps with geolocation -->
