--- a/index.html
+++ b/index.html
@@ -5,19 +5,8 @@
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
   <link rel="icon" href="images/coffee.png">
-  <style>
-    /* Always set the map height explicitly to define the size of the div
-     * element that contains the map. */
-    #map {
-      height: 100%;
-    }
-    /* Optional: Makes the sample page fill the window. */
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-  </style>
+  <!-- CSS -->
+  <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
   
