--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-  
+  <!-- Div container that holds the buttons positioned over Google Maps -->
+  <div id="floating-panel">
+    <div id="option-button" onclick="toggleGroup('')">
+      <img src="images/fast-food.png">
+    </div>
+    <span>
+    <div id="option-button" onclick="toggleGroup('')">
+      <img src="images/gas-station.png">
+    </div>
+  </div>
+
   <!-- Google Maps container -->
   <div id="map"></div>
 
