--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 <body>
   <!-- Div container that holds the buttons positioned over Google Maps -->
   <div id="floating-panel">
+    <!-- Coffee shop button -->
+    <div id="option-button" onclick="toggleGroup('')">
+      <img src="images/coffee.png">
+    </div>
+    <span>
+    <!-- Fast food button -->
     <div id="option-button" onclick="toggleGroup('')">
       <img src="images/fast-food.png">
     </div>
     <span>
+    <!-- Gas station button -->
     <div id="option-button" onclick="toggleGroup('')">
       <img src="images/gas-station.png">
     </div>
