--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <!-- Div container that holds the buttons positioned over Google Maps -->
   <div id="floating-panel">
     <!-- Coffee shop button -->
-    <div id="option-button" onclick="toggleGroup('')">
+    <div id="option-button" onclick="toggleGroup('cafe')">
       <img src="images/coffee.png">
     </div>
     <span>
     <!-- Fast food button -->
-    <div id="option-button" onclick="toggleGroup('')">
+    <div id="option-button" onclick="toggleGroup('restaurant')">
       <img src="images/fast-food.png">
     </div>
     <span>
     <!-- Gas station button -->
-    <div id="option-button" onclick="toggleGroup('')">
+    <div id="option-button" onclick="toggleGroup('gas_station')">
       <img src="images/gas-station.png">
     </div>
   </div>
